HW/HW1/results/bermudezdaniel_results.txt
Segment.java:4: error: cannot find symbol
	private Point a;
	        ^
  symbol:   class Point
  location: class Segment
Segment.java:5: error: cannot find symbol
	private Point b;
	        ^
  symbol:   class Point
  location: class Segment
Segment.java:7: error: cannot find symbol
	public Segment(Point a, Point b) {
	               ^
  symbol:   class Point
  location: class Segment
Segment.java:7: error: cannot find symbol
	public Segment(Point a, Point b) {
	                        ^
  symbol:   class Point
  location: class Segment
Segment.java:12: error: cannot find symbol
	public void setEndPoints(Point a, Point b) {
	                         ^
  symbol:   class Point
  location: class Segment
Segment.java:12: error: cannot find symbol
	public void setEndPoints(Point a, Point b) {
	                                  ^
  symbol:   class Point
  location: class Segment
Segment.java:18: error: cannot find symbol
		this.a = new Point(x1, y1);
		             ^
  symbol:   class Point
  location: class Segment
Segment.java:19: error: cannot find symbol
		this.b = new Point(x2, y2);
		             ^
  symbol:   class Point
  location: class Segment
8 errors
